force-app/main/default/objects/FDF__c/FDF__c.object-meta.xml
<CustomObject>
    <label>Formulation(FDF)</label>
    <nameField>
        <label>FDF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulation(FDF)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>