force-app/main/default/objects/FDF__c/fields/Agency_Approval__c.field-meta.xml
<CustomField>
    <fullName>Agency_Approval__c</fullName>
    <label>Agency Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>