force-app/main/default/objects/FDF__c/fields/Analytical_method_development__c.field-meta.xml
<CustomField>
    <fullName>Analytical_method_development__c</fullName>
    <label>Analytical method development</label>
    <length>255</length>
    <type>Text</type>
</CustomField>