force-app/main/default/objects/FDF__c/fields/Budget_approval_from_Finance__c.field-meta.xml
<CustomField>
    <fullName>Budget_approval_from_Finance__c</fullName>
    <label>Budget approval from Finance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>