force-app/main/default/objects/FDF__c/fields/Commercial_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Dispatcher__c</fullName>
    <label>Commercial Dispatcher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>