force-app/main/default/objects/FDF__c/fields/Coversion_Cost__c.field-meta.xml
<CustomField>
    <fullName>Coversion_Cost__c</fullName>
    <label>Coversion Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>