force-app/main/default/objects/FDF__c/fields/Detailed_Pricing_by_Costing__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Pricing_by_Costing__c</fullName>
    <label>Detailed Pricing by Costing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>