force-app/main/default/objects/FDF__c/fields/Draft_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Draft_Agreement__c</fullName>
    <label>Draft Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>