force-app/main/default/objects/FDF__c/fields/Feasibility_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_evaluation__c</fullName>
    <label>Feasibility evaluation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>