force-app/main/default/objects/FDF__c/fields/Licensing__c.field-meta.xml
<CustomField>
    <fullName>Licensing__c</fullName>
    <label>Licensing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>