force-app/main/default/objects/FDF__c/fields/Milestone_payment__c.field-meta.xml
<CustomField>
    <fullName>Milestone_payment__c</fullName>
    <label>Milestone payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>