force-app/main/default/objects/FDF__c/fields/NPP_form__c.field-meta.xml
<CustomField>
    <fullName>NPP_form__c</fullName>
    <label>NPP form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>