force-app/main/default/objects/FDF__c/fields/Optimisation_Batch__c.field-meta.xml
<CustomField>
    <fullName>Optimisation_Batch__c</fullName>
    <label>Optimisation Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>