force-app/main/default/objects/FDF__c/fields/Pre_formulation_studies__c.field-meta.xml
<CustomField>
    <fullName>Pre_formulation_studies__c</fullName>
    <label>Pre-formulation studies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>