force-app/main/default/objects/FDF__c/fields/Project_initiation__c.field-meta.xml
<CustomField>
    <fullName>Project_initiation__c</fullName>
    <label>Project initiation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>