force-app/main/default/objects/FDF__c/fields/Prototype_formulation__c.field-meta.xml
<CustomField>
    <fullName>Prototype_formulation__c</fullName>
    <label>Prototype formulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>