force-app/main/default/objects/FDF__c/fields/R_D_Report__c.field-meta.xml
<CustomField>
    <fullName>R_D_Report__c</fullName>
    <label>R&amp;D Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>