force-app/main/default/objects/FDF__c/fields/Rallying_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Rallying_Forecast__c</fullName>
    <label>Rallying Forecast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>