force-app/main/default/objects/FDF__c/fields/Raw_Material_Sourcing__c.field-meta.xml
<CustomField>
    <fullName>Raw_Material_Sourcing__c</fullName>
    <label>Raw Material Sourcing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>