force-app/main/default/objects/FDF__c/fields/Reference_product_availability__c.field-meta.xml
<CustomField>
    <fullName>Reference_product_availability__c</fullName>
    <label>Reference product availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>