force-app/main/default/objects/FDF__c/fields/Request_for_RFQ__c.field-meta.xml
<CustomField>
    <fullName>Request_for_RFQ__c</fullName>
    <label>Request for RFQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>