force-app/main/default/objects/FDF__c/fields/RFQ_by_Dept__c.field-meta.xml
<CustomField>
    <fullName>RFQ_by_Dept__c</fullName>
    <label>RFQ by Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>