force-app/main/default/objects/FDF__c/fields/RM_Cost__c.field-meta.xml
<CustomField>
    <fullName>RM_Cost__c</fullName>
    <label>RM Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>