force-app/main/default/objects/FDF__c/fields/RM_PM_Procurement__c.field-meta.xml
<CustomField>
    <fullName>RM_PM_Procurement__c</fullName>
    <label>RM-PM Procurement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>