force-app/main/default/objects/FDF__c/fields/Signing_of_the_agreement__c.field-meta.xml
<CustomField>
    <fullName>Signing_of_the_agreement__c</fullName>
    <label>Signing of the agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>