force-app/main/default/objects/FDF__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Costing</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Research And Development</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>SCM</fullName>
            </value>
            <value>
                <fullName>6 Month Stability Data</fullName>
                <isActive>false</isActive>
                <label>6 Month Stability Data</label>
            </value>
            <value>
                <fullName>Analytical Method Transfer</fullName>
                <isActive>false</isActive>
                <label>Analytical Method Transfer</label>
            </value>
            <value>
                <fullName>Commercial Dispatches</fullName>
                <isActive>false</isActive>
                <label>Commercial Dispatches</label>
            </value>
            <value>
                <fullName>Dossier Compilation</fullName>
                <isActive>false</isActive>
                <label>Dossier Compilation</label>
            </value>
            <value>
                <fullName>MAH Approval</fullName>
                <isActive>false</isActive>
                <label>MAH Approval</label>
            </value>
            <value>
                <fullName>Optimization Batch Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Optimization Batch Manufacturing</label>
            </value>
            <value>
                <fullName>Optimization Report Signing</fullName>
                <isActive>false</isActive>
                <label>Optimization Report Signing</label>
            </value>
            <value>
                <fullName>Validation Batch Manufacturing</fullName>
                <isActive>false</isActive>
                <label>Validation Batch Manufacturing</label>
            </value>
            <value>
                <fullName>Validation Report Signing</fullName>
                <isActive>false</isActive>
                <label>Validation Report Signing</label>
            </value>
            <value>
                <fullName>Vendor Qualification</fullName>
                <isActive>false</isActive>
                <label>Vendor Qualification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>