force-app/main/default/objects/FDF__c/fields/Validation_Batch__c.field-meta.xml
<CustomField>
    <fullName>Validation_Batch__c</fullName>
    <label>Validation Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>