force-app/main/default/objects/FDF__c/fields/X6_M_Stability__c.field-meta.xml
<CustomField>
    <fullName>X6_M_Stability__c</fullName>
    <label>6 M Stability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>