force-app/main/default/objects/FDF__c/recordTypes/New_Product_Development.recordType-meta.xml
<RecordType>
    <fullName>New_Product_Development</fullName>
    <active>true</active>
    <label>New Product Development</label>
</RecordType>