force-app/main/default/objects/FDF__c/recordTypes/Tech_Transfer_Products.recordType-meta.xml
<RecordType>
    <fullName>Tech_Transfer_Products</fullName>
    <active>true</active>
    <label>Tech Transfer Products</label>
</RecordType>